Changes updated in banking project

--- a/Banking Project/styles.css
+++ b/Banking Project/styles.css
@@ -8,6 +8,11 @@
     visibility: hidden;
 }
 
+#content-body{
+    display: none;
+}
+
+
 @keyframes loadAnimation {
     100% {
         rotate: 360deg;
